<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:text="@string/car_info_activity_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/mark_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:hint="@string/car_name_edt"
        android:inputType="text" />

    <EditText
        android:id="@+id/date_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:hint="@string/guarantee_period_text"
        android:inputType="date" />

    <EditText
        android:id="@+id/country_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:hint="@string/country_text"
        android:inputType="date" />

    <EditText
        android:id="@+id/owner_name_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:hint="@string/owner_name_text" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:text="@string/save_btn_text"
        android:textSize="20sp" />
</LinearLayout>